proof read, minor spelling errors, missing words submitted final pdf and zip code

--- a/ADS Coursework - TSP/report/report.tex
+++ b/ADS Coursework - TSP/report/report.tex
@@ -113,7 +113,7 @@ The Nearest Neighbour algorithm used here solves the problem by starting with th
 \end{algorithm}
 
 \paragraph{Second Solution: Nearest Neighbour Enhanced}
-The Nearest Neighbour Enhanced algorithm uses a fairly simple adaptation to the previous algorithm. Instead of starting with the first city in the file, it will start with a random city and find the closest city to it and carry on from there. After that it will calculate the length of that route. It will do these two steps a number of times (specifically a tenth of the number of cities in the file) and then look over the list of lengths and pick the lowest route length found (this can be seen in Algorithm \ref{nnenhanced} and in code in Appendix \ref{maincode}). This algorithm should consistently find lower route lengths at the expense of increased run time. As it is running the previous algorithm $n/10$ times (where n is the number of cities), its order of complexity is $O(n^3)$. This means that as the problem size increases, the run time will increase significantly (for example, the theoretical run time on a set of 10 cities will be 8 times bigger than on a set of 5, as $(10/5)^3 = 8$).
+The Nearest Neighbour Enhanced algorithm uses a fairly simple adaptation to the previous algorithm. Instead of starting with the first city in the file, it will start with a random city and find the closest city to it and carry on from there. After that it will calculate the length of that route. It will do these two steps a number of times (specifically a tenth of the number of cities in the file) and then look over the list of lengths and pick the lowest route length found (this can be seen in Algorithm \ref{nnenhanced} and in code in Appendix \ref{maincode}). This algorithm should consistently find lower route lengths at the expense of increased run time. As it is running the previous algorithm $n/10$ times (where $n$ is the number of cities), its order of complexity is $O(n^3)$. This means that as the problem size increases, the run time will increase significantly (for example, the theoretical run time on a set of 10 cities will be 8 times bigger than on a set of 5, as $(10/5)^3 = 8$).
 
 \begin{algorithm}[h]
 	\caption{Nearest Neighbour Enhanced Psuedo-code}
@@ -147,7 +147,7 @@ The algorithms were tested against each other and on a variety of problem instan
 \end{itemize}
 
 \paragraph{Accuracy, Reliability and Reasoning for Testing Methodology}
- The number of cities in the file is initially known and is part of the file name. The number of cities in the array list (that the cities from the file are loaded into) is checked to match the number of cities in the file, and checked again after the algorithm is run. This is to ensure that the Route Length for the shortest route found is including every city in the problem instance and eliminate any artificially short routes. Nine problem instances were used, with an appropriately varying number of cities in each (ranging from 52 cities, up to 5915 cities) to help visualise the effect of $n$ on the Run Time of the two algorithms. Each problem instance tested stored the location of cities as points in Euclidean 2D geometry (with $x$, $y$ coordinates) and the way the software loaded the file's city list into an array list relied upon the city locations being stored this way. Therefore only problem instances that stored the cities in this way were tested. The Run Time results were recorded in milliseconds to best represent the time taken, with a problem instance with a small number of cities taking only a few milliseconds, and larger sample sizes taking hundreds and even thousands of milliseconds. Seconds could also have been chosen and been similarly effective due to the wide range of times achieved. The Route Length results were recorded with arbitrary units, as the location of each city was simply stored as a 2D point in the files with no indication of the units of the $x$ and $y$ coordinates. Each test was run on the same PC, from the same code, with each result being recorded one at a time to reduce memory build up slowing down Run Time and improve the accuracy and repeatability of the results. Ten tests were run for each problem instance and for each algorithm and the average Run Times and Route Lengths were used for displaying the results to further improve reliability of the accuracy of the testing methodology.
+ The number of cities in the file is initially known and is part of the file name. The number of cities in the array list (that the cities from the file are loaded into) is checked to match the number of cities in the file, and checked again after the algorithm is run. This is to ensure that the Route Length for the shortest route found is including every city in the problem instance and to eliminate any artificially short routes. Nine problem instances were used, with an appropriately varying number of cities in each (ranging from 52 cities, up to 5915 cities) to help visualise the effect of $n$ on the Run Time of the two algorithms. Each problem instance tested stored the location of cities as points in Euclidean 2D geometry (with $x$, $y$ coordinates) and the way the software loaded the file's city list into an array list relied upon the city locations being stored this way. Therefore only problem instances that stored the cities in this way were tested. The Run Time results were recorded in milliseconds to best represent the time taken, with a problem instance with a small number of cities taking only a few milliseconds, and larger sample sizes taking hundreds and even thousands of milliseconds. Seconds could also have been chosen and been similarly effective due to the wide range of times achieved. The Route Length results were recorded with arbitrary units, as the location of each city was simply stored as a 2D point in the files with no indication of the units of the $x$ and $y$ coordinates. Each test was run on the same PC, from the same code, with each result being recorded one at a time to reduce memory build up slowing down Run Time and improve the accuracy and repeatability of the results. Ten tests were run for each problem instance and for each algorithm and the average Run Times and Route Lengths were used for displaying the results to further improve reliability of the accuracy of the testing methodology.
 
 
 \section{Results}
@@ -235,7 +235,7 @@ The ratios table has the problem instances' number of cities, $n$, on the left w
 
 
 \paragraph{Efficacy Graphs}
-The graph shown below (Figure \ref{efficacycomparedcolumngraph}) displays the results found for the Route Length for the shortest route found by both the Nearest Neighbour Basic and Nearest Neighbour Enhanced algorithms against the separate problem instances (a full size version is found in Appendix \ref{efficacycomparedgraph}). For every problem instance tested the Enhanced algorithm achieved a shorter Route Length than the basic algorithm. However this graph has some results as low as $759.5$ units (for $n = 101$) and as high as $707,498.6$ units (for $n = 5915$), therefore it's hard to display by how much the Enhanced algorithm improved upon the shortest route found by the Basic algorithm for some of the problem instances tested.
+The graph shown below (Figure \ref{efficacycomparedcolumngraph}) displays the results found for the Route Length for the shortest route found by both the Nearest Neighbour Basic and Nearest Neighbour Enhanced algorithms against the separate problem instances (a full size version is found in Appendix \ref{efficacycomparedgraph}). For every problem instance tested the Enhanced algorithm achieved a shorter Route Length than the Basic algorithm. However this graph has some results as low as $759.5$ units (for $n = 101$) and as high as $707,498.6$ units (for $n = 5915$), therefore it's hard to display by how much the Enhanced algorithm improved upon the shortest route found by the Basic algorithm for some of the problem instances tested.
 
 \begin{figure}[h]
 	\includegraphics[width=\columnwidth]{images/efficacy_compared_column.pdf}
@@ -268,7 +268,7 @@ The Nearest Neighbour Enhanced algorithm consistently found shorter Route Length
 	\label{efficiencyenhancedcolumngraph}
 \end{figure}
 
-The graph below (Figure \ref{efficiencycomparedcolumngraph}) shows the comparison between both the algorithms' Run Times on a logarithmic scale (a full sized graph can be found in Appendix \ref{efficiencycomparedgraph}). Once again for both the Enhanced and Basic algorithms there are generated polynomial trendlines of order 2 and 3 respectively shown in the graph that reinforce the separate algorithms' order of complexity, as discussed earlier. Using this graph it is clear that whilst the Enhanced algorithm regularly returns shorter final route lengths, the Basic algorithm finds the solution significantly faster. On smaller data sets (up to 500 cities) the difference in time is negligible (within one tenth of a second), but as the number of cities in the problem instance increases, the Run Time for the Enhanced algorithm becomes large enough to become a problem. The largest data set tested had 5915 cities, for this problem the Basic algorithm returned a Route Length in an average Run Time of $336.4ms$, whereas the Enhanced algorithm returned a Route Length in an average Run Time of $179.763.5ms$, or roughly 3 minutes. Given a data set of 10,000 or more cities, using the Enhanced algorithm to solve the problem becomes increasingly infeasible. 
+The graph below (Figure \ref{efficiencycomparedcolumngraph}) shows the comparison between both the algorithms' Run Times on a logarithmic scale (a full sized graph can be found in Appendix \ref{efficiencycomparedgraph}). Once again for both the Enhanced and Basic algorithms there are generated polynomial trendlines of order 2 and 3 respectively shown in the graph that reinforce the separate algorithms' order of complexity, as discussed earlier. Using this graph it is clear that whilst the Enhanced algorithm regularly returns shorter final route lengths, the Basic algorithm finds the solution significantly faster. On smaller data sets (up to 500 cities) the difference in time is negligible (within one tenth of a second), but as the number of cities in the problem instance increases, the Run Time for the Enhanced algorithm becomes large enough to become a problem. The largest data set tested had 5915 cities, for this problem the Basic algorithm returned a Route Length in an average Run Time of $336.4ms$, whereas the Enhanced algorithm returned a Route Length in an average Run Time of $179,763.5ms$, or roughly 3 minutes. Given a data set of 10,000 or more cities, using the Enhanced algorithm to solve the problem becomes increasingly infeasible. 
 
 \begin{figure}[h]
 	\includegraphics[width=\columnwidth]{images/efficiency_compared_column.pdf}
@@ -278,7 +278,7 @@ The graph below (Figure \ref{efficiencycomparedcolumngraph}) shows the compariso
 
 \section{Conclusions}
 \paragraph{Results Explanations}
-The Nearest Neighbour Basic algorithm finds the shortest route that visits each city only once from a list of unsorted cities by finding the closest city to the first city in the list, then finding the closest city to that city and does this for all cities in the list (refer to Algorithm \ref{nnbasic} and Appendix \ref{maincode}). It has an order of complexity of $O(n^2)$, where $n$ is the number of cities in the unsorted list, as for each city in the list it looks at the distance between it and all other cities. Because of this the time it takes for the algorithm to return a solution will be proportional to the number of cities in the list squared. The Nearest Neighbour Enhanced algorithm, however, finds the shortest route by running an adapted version of the Basic algorithm, where it starts with a random city in the unsorted list as opposed to the first city, multiple (a tenth of $n$) times, and choosing the shortest route out of all the routes found (refer to Algorithm \ref{nnenhanced} and Appendix \ref{maincode}). Because of this the order of complexity is $n^2 \times n/10$ or $O(n^3)$. Due to having a wide range of routes, found by running the adapted Nearest Neighbour algorithm multiple times, to select the lowest Route Length from; the Enhanced algorithm reliably produces a final solution to the problem with a shorter Route Length than the Basic algorithm (as seen in Figures \ref{efficacycomparedcolumngraph} and \ref{efficacycomparedratioscolumngraph} (Appendix \ref{efficacycomparedgraph} and \ref{efficacycomparedratiosgraph} respectively)). However, as stated before, finding a shorter route comes at a cost. The effect of the increased complexity can clearly be seen in Figures \ref{efficiencybasiccolumngraph}, \ref{efficiencyenhancedcolumngraph} and \ref{efficiencycomparedcolumngraph} (Appendix \ref{efficiencybasicgraph}, \ref{efficiencyenhancedgraph} and \ref{efficiencycomparedgraph} respectively or full size graphs). The Run Time results for the Enhanced algorithm are longer than the Basic algorithm's for all data sets and significantly so when the number of cities becomes larger.
+The Nearest Neighbour Basic algorithm finds the shortest route that visits each city only once from a list of unsorted cities by finding the closest city to the first city in the list, then finding the closest city to that city and does this for all cities in the list (refer to Algorithm \ref{nnbasic} and Appendix \ref{maincode}). It has an order of complexity of $O(n^2)$, where $n$ is the number of cities in the unsorted list, as for each city in the list it looks at the distance between it and all other cities. Because of this the time it takes for the algorithm to return a solution will be proportional to the number of cities in the list squared. The Nearest Neighbour Enhanced algorithm, however, finds the shortest route by running an adapted version of the Basic algorithm, where it starts with a random city in the unsorted list as opposed to the first city, multiple (a tenth of $n$) times, and choosing the shortest route out of all the routes found (refer to Algorithm \ref{nnenhanced} and Appendix \ref{maincode}). Because of this the order of complexity is $n^2 \times n/10$ or $O(n^3)$. Due to having a wide range of routes, found by running the adapted Nearest Neighbour algorithm multiple times, to select the lowest Route Length from; the Enhanced algorithm reliably produces a final solution to the problem with a shorter Route Length than the Basic algorithm (as seen in Figures \ref{efficacycomparedcolumngraph} and \ref{efficacycomparedratioscolumngraph} (Appendix \ref{efficacycomparedgraph} and \ref{efficacycomparedratiosgraph} respectively for full size graphs)). However, as stated before, finding a shorter route comes at a cost. The effect of the increased complexity can clearly be seen in Figures \ref{efficiencybasiccolumngraph}, \ref{efficiencyenhancedcolumngraph} and \ref{efficiencycomparedcolumngraph} (Appendix \ref{efficiencybasicgraph}, \ref{efficiencyenhancedgraph} and \ref{efficiencycomparedgraph} respectively for full size graphs). The Run Time results for the Enhanced algorithm are longer than the Basic algorithm's for all data sets and significantly so when the number of cities becomes larger.
 \paragraph{Reflections on the Value of the Algorithms}
 There were many parameters put in place to ensure accuracy and repeatability of the tests, for example the Run Time was calculated looking only at the time it took for the algorithm to return a sorted list and there were multiple tests done for multiple problem instances, all done on the same PC. Given these parameters and that the results represented what was expected of the algorithms due to their respective orders of complexity, the results can be said to be reliable, therefore the values of the separate algorithms can be discussed. It is clear that the Nearest Neighbour Enhanced algorithm repeatedly found shorter routes for every problem instance tested, and that for smaller data sets it did this with a negligible increase in Run Time. However, for how much shorter the route found was compared to what the Basic algorithm found, the increase in the Run Time becomes increasingly hard to justify for larger data sets. Referring to the ratios table, Figure \ref{ratioresultstable}, it is clear that for problem instances with more than 500 cities the Run Time is hundreds of times larger, whilst the Route Length found is still only, at best, 0.95 times what the Basic algorithm found.
 \paragraph{Final Thoughts}
